--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "'This is a string'"
       ]
      },
      "execution_count": 1,
@@ -17,8 +17,15 @@
     }
    ],
    "source": [
-    "3 + 5"
+    "\"This is a string\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
